--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "bitfumes/karix-notification-channel",
+  "name": "karix/karix-sms-notification",
   "description": "Allow you to use karix sms as custom channel in laravel notifications",
   "type": "library",
   "license": "MIT",
@@ -12,19 +12,19 @@
   "repositories": [
     {
       "type": "git",
-      "url": "https://github.com/karixtech/karix-php.git"
+      "url": "https://github.com/pratik149/karix-lib.git"
     }
   ],
   "require": {
-    "karixtech/karix-php": "2.0.0"
+    "karix/karix-lib": "2.0.0"
   },
   "require-dev": {
-    "illuminate/notifications": "^5.8@dev",
-    "phpunit/phpunit": "^8.0",
-    "mockery/mockery": "^1.0@dev",
-    "orchestra/testbench": "^4.0",
-    "orchestra/database": "^4.0",
-    "illuminate/support": "^5.8|^6.0"
+    "illuminate/notifications": "^7.9",
+    "phpunit/phpunit": "^8.5",
+    "mockery/mockery": "^1.3.1",
+    "orchestra/testbench": "^5.2",
+    "orchestra/database": "^5.1",
+    "illuminate/support": "^7.9"
   },
   "minimum-stability": "dev",
   "autoload": {
